--- a/src/PA/UserBundle/Resources/config/routing.yml
+++ b/src/PA/UserBundle/Resources/config/routing.yml
@@ -1,54 +1,7 @@
-pa_user_homepage:
-    path:     /hello/{name}
-    defaults: { _controller: PAUserBundle:Default:index }
+pa_user_user:
+    resource: "@PAUserBundle/Resources/config/routes/user.yml"
+    prefix:   /user
 
-pa_user_index:
-    path:    /user/index
-    defaults: { _controller: PAUserBundle:User:index }
-    
-pa_user_articles:
-    path:    /user/articles/{page}
-    defaults: { _controller: PAUserBundle:User:articles, page: 1 }
-    requirements:
-         page: \d+
-         
-pa_user_add:
-    path:    /user/add
-    defaults: { _controller: PAUserBundle:User:add }
-    
-pa_user_create:
-    path:    /user/create
-    defaults: { _controller: PAUserBundle:User:create }
-    methods: POST
-    
-pa_user_edit:
-    path:    /user/edit/{id}
-    defaults: { _controller: PAUserBundle:User:edit }
-    
-pa_user_update:
-    path:    /user/update/{id}
-    defaults: { _controller: PAUserBundle:User:update }
-    methods: [POST, PUT]
-    
-pa_user_view:
-    path:    /user/view/{id}
-    defaults: { _controller: PAUserBundle:User:view }
-    
-pa_user_delete:
-    path:    /user/delete/{id}
-    defaults: { _controller: PAUserBundle:User:delete }
-    methods: [POST, DELETE]
-    
-pa_user_redirect_add:
-    path: /user/create
-    defaults:
-        _controller: PAUserBundle:User:add
-        path: /user/add
-        permanent: true
-        
-pa_user_redirect_edit:
-    path: /user/update/{id}
-    defaults:
-        _controller: PAUserBundle:User:edit
-        path: /user/edit/{id}
-        permanent: true
+pa_task_task:
+    resource: "@PAUserBundle/Resources/config/routes/task.yml"
+    prefix:   /task
